--- a/src/umr/templates/classroom.html
+++ b/src/umr/templates/classroom.html
@@ -1,109 +1,94 @@
+{% extends 'articleHeader.html' %}
+{% block header %}
 
-  {% extends 'articleHeader.html' %}
-  {% block header %}
+<div class="main-container">
+  <header class="mdl-layout__header mdl-layout__header--transparent">
 
-  <div
-    class="main-container"
-  >
-    <header class="mdl-layout__header mdl-layout__header--transparent">
-
-      <div
-        class="mdl-layout__tab-bar mdl-js-ripple-effect"
-        class="select-article"
-      >
-        <p class="welcome_personal">Welcome,</p>
-        <h1 class="select-article">Select an Article</h1>
-        <div class="all__tabs">
-          <div class="row__tab">
-            <a id="inbox_tab" href="/read" class="mdl-layout__tab">
-              Articles</a
-            >
-          </div>
-          <div class="row__bar">
-            <div class="bar"></div>
-          </div>
-          <div class="row__tab">
-            <a id="starred_tab" href="/read/bookmarks" class="mdl-layout__tab">
-              Bookmarks</a
-            >
-          </div>
-          <div class="row__bar">
-            <div class="bar"></div>
-          </div>
-          <div class="row__tab">
-            <a id="cohort_tab" href="#" class="mdl-layout__tab">
-              Classroom</a
-            >
-          </div>
+    <div class="mdl-layout__tab-bar mdl-js-ripple-effect" class="select-article">
+      <p class="welcome_personal">Welcome,</p>
+      <h1 class="select-article">Select an Article</h1>
+      <div class="all__tabs">
+        <div class="row__tab">
+          <a id="inbox_tab" href="/read" class="mdl-layout__tab">
+            Articles</a>
+        </div>
+        <div class="row__bar">
+          <div class="bar"></div>
+        </div>
+        <div class="row__tab">
+          <a id="starred_tab" href="/read/bookmarks" class="mdl-layout__tab">
+            Bookmarks</a>
+        </div>
+        <div class="row__bar">
+          <div class="bar"></div>
+        </div>
+        <div class="row__tab">
+          <a id="cohort_tab" href="#" class="mdl-layout__tab">
+            Classroom</a>
         </div>
       </div>
-    </header>
-    <div class="widthOfColumn">
-      <div class="mdl-layout__drawer mdl-color--amber-A700">
-        <nav class="mdl-navigation">
-     
-          <!-- Sorting buttons-->
-          <div class="sortingCategories">
-            <div class="wordsSorting">
-              <div class="wordLabel">words</div>
-              <div id="triangleWords" class="triangle"></div>
-            </div>
-            <div class="levelSorting">
-              <div class="levelLabel">level</div>
-              <div id="triangleLevel" class="triangle"></div>
-            </div>
-          </div>
-        </nav>
-      </div>
     </div>
-    <div class="widthOfColumn">
-      <div class="tagsOfTopics"></div>
-    </div>
-    <div class="widthOfColumn">
-      <main class="mdl-layout__content">
-        <section class="mdl-layout__tab-panel is-active" id="inbox">
-          <div class="page-content">
-            <!-- Search notification -->
-            <ul id="searchNotification" class="searchNotification"></ul>
-            <!-- List of articles -->
-            <ul id="articleLinkList" class="articleLinkList"></ul>
-            <br />
-            <div id="emptyArticleListImage" class="emptyPage">
-              <img
-                class="sadEleph"
-                src="{{ url_for('reader_blueprint.static',filename='images/empty.png') }}"
-                alt="Not subscribed to any feeds..."
-              />
-            </div>
-            <div class="loader">
-              <img
-                class="eleph"
-                src="{{ url_for('reader_blueprint.static',filename='images/elephlogo.png') }}"
-                alt="Loading..."
-              />
-            </div>
-        </section>
-        <section class="mdl-layout__tab-panel" id="starred">
-          <div class="page-content">
-            <ul id="starredArticleList" class="articleLinkList"></ul>
-            <div id="emptyStarredArticleListImage" class="emptyPage">
-            </div>
+  </header>
+  <div class="widthOfColumn">
+    <div class="mdl-layout__drawer mdl-color--amber-A700">
+      <nav class="mdl-navigation">
+
+        <!-- Sorting buttons-->
+        <div class="sortingCategories">
+          <div class="wordsSorting">
+            <div class="wordLabel">words</div>
+            <div id="triangleWords" class="triangle"></div>
           </div>
-        </section>
-        <section class="mdl-layout__tab-panel" id="cohort">
-          <div class="page-content">
-            <ul id="cohortArticleList" class="articleLinkList"></ul>
-            <div id="emptyCohortArticleListImage" class="emptyPage">
-              <p>There are no articles in your class</p>
-            </div>
+          <div class="levelSorting">
+            <div class="levelLabel">level</div>
+            <div id="triangleLevel" class="triangle"></div>
           </div>
-        </section>
-      </main>
+        </div>
+      </nav>
     </div>
   </div>
+  <div class="widthOfColumn">
+    <div class="tagsOfTopics"></div>
+  </div>
+  <div class="widthOfColumn">
+    <main class="mdl-layout__content">
+      <section class="mdl-layout__tab-panel is-active" id="inbox">
+        <div class="page-content">
+          <!-- Search notification -->
+          <ul id="searchNotification" class="searchNotification"></ul>
+          <!-- List of articles -->
+          <ul id="articleLinkList" class="articleLinkList"></ul>
+          <br />
+          <div id="emptyArticleListImage" class="emptyPage">
+            <img class="sadEleph" src="{{ url_for('reader_blueprint.static',filename='images/empty.png') }}"
+              alt="Not subscribed to any feeds..." />
+          </div>
+          <div class="loader">
+            <img class="eleph" src="{{ url_for('reader_blueprint.static',filename='images/elephlogo.png') }}"
+              alt="Loading..." />
+          </div>
+      </section>
+      <section class="mdl-layout__tab-panel" id="starred">
+        <div class="page-content">
+          <ul id="starredArticleList" class="articleLinkList"></ul>
+          <div id="emptyStarredArticleListImage" class="emptyPage">
+          </div>
+        </div>
+      </section>
+      <section class="mdl-layout__tab-panel" id="cohort">
+        <div class="page-content">
+          <ul id="cohortArticleList" class="articleLinkList"></ul>
+          <div id="emptyCohortArticleListImage" class="emptyPage">
+            <p>There are no articles in your class</p>
+          </div>
+        </div>
+      </section>
+    </main>
+  </div>
+</div>
 
-  <!-- Template for subscribed source items -->
-  <script id="subscription-template-source" type="text/template">
+<!-- Template for subscribed source items -->
+<script id="subscription-template-source" type="text/template">
        <span sourceRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
     	<span class="mdl-chip__text">{% raw %}{{ title }}{% endraw %}</span>
     	<a class="mdl-chip__action removeButton">
@@ -112,8 +97,8 @@
     </span>
   </script>
 
-  <!-- Template for subscribed topic items -->
-  <script id="subscription-template-topic" type="text/template">
+<!-- Template for subscribed topic items -->
+<script id="subscription-template-topic" type="text/template">
        <span topicRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
     	<span class="mdl-chip__text">{% raw %}{{ title }}{% endraw %}</span>
     	<a class="mdl-chip__action removeButton">
@@ -122,8 +107,8 @@
     </span>
   </script>
 
-  <!-- Template for subscribed search items -->
-  <script id="subscription-template-search" type="text/template">
+<!-- Template for subscribed search items -->
+<script id="subscription-template-search" type="text/template">
        <span searchRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
     	<span class="mdl-chip__text">{% raw %}{{ search }}{% endraw %}</span>
     	<a class="mdl-chip__action removeButton">
@@ -132,8 +117,8 @@
     </span>
   </script>
 
-  <!-- Template for subscribed language items -->
-  <script id="subscription-template-language" type="text/template">
+<!-- Template for subscribed language items -->
+<script id="subscription-template-language" type="text/template">
        <span languageRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
     	<span class="mdl-chip__text">{% raw %}{{ language }}{% endraw %}</span>
     	<a class="mdl-chip__action removeButton">
@@ -143,9 +128,9 @@
   </script>
 
 
-  <!-- Template for a cohort article link. -->
-  <script id="cohort-articleLink-template" type="text/template">
-    <li class="{% raw %}{{ wordCount }}{% endraw %} {% raw %}{{articleDifficulty}}{% endraw %} fadeoutOnClick articleLinkEntry  {% raw %}{{alreadyOpenedClass}}{% endraw %}" 
+<!-- Template for a cohort article link. -->
+<script id="cohort-articleLink-template" type="text/template">
+    <li class="{% raw %}{{ wordCount }}{% endraw %} {% raw %}{{articleDifficulty}}{% endraw %} fadeoutOnClick articleLinkEntry  {% raw %}{{alreadyOpenedClass}}{% endraw %}"
         articleLinkFeedID="{% raw %}{{articleLinkFeedID}}{% endraw %}">
         <a href="{{ url_for('reader_blueprint.get_article') }}?articleID={% raw %}{{ articleLinkID }}{% endraw %}">
             <div class="articleLinkHeader">
@@ -156,11 +141,11 @@
                     <span class="difficulty-level articleLinkDifficultyText"
                     > {% raw %}{{articleDifficulty}}{% endraw %} </span>
                     <span class="articleLinkDifficultyText"> {% raw %}{{ wordCount }}{% endraw %}</span>
-                    
+
                 </div>
             </div>
             <div class="articleLinkSummary">
-                
+
                 {% raw %}{{articleSummary}}{% endraw %}
             </div>
             <div class="articleTopics">
@@ -172,7 +157,7 @@
     <div class="articleLinkSpacer"></div>
   </script>
 
-  <script id="search-notification-template" type="text/template">
+<script id="search-notification-template" type="text/template">
     <li class="fadeoutOnClick articleLinkEntry search-notification-box">
         <div class="articleLinkHeader">
             <div class="searchText headerElement">
@@ -185,7 +170,8 @@
     </li>
     <div class="articleLinkSpacer"></div>
   </script>
-  {% endblock %}
-  <!-- Dialog windows for adding a source, topic and filter. -->
-  {% include 'addSourceDialog.html' %} {% include 'addTopicDialog.html' %}
+{% endblock %}
+<!-- Dialog windows for adding a source, topic and filter. -->
+{% include 'addSourceDialog.html' %} {% include 'addTopicDialog.html' %}
+
 </html>
