links for log out and settings in sidebar

--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -69,23 +69,26 @@
     <div class="generalNavLinks">
 
       <div class="settingsbtn">
-        <a class="settingsLink">
+        <a class="settingsLink" href="{{ url_for('account.my_settings') }}">
           <img class="settingsImg" src="{{ url_for('reader_blueprint.static',filename='images/settingsWheel.svg') }}"
             alt="Click here for general settings" />
         </a>
       </div>
+      <br />
+      <!-- 
       <div class="settingsbtn">
         <a class="settingsLink">
           <img class="settingsImg" src="{{ url_for('reader_blueprint.static',filename='images/languageSwitch.svg') }}"
             alt="Click here for general settings" />
         </a>
       </div>
+      -->
 
       <div class="nav-generalbtn">
         <a class="generalLinks" href="#">Get in touch</a>
       </div>
       <div class="nav-generalbtn">
-        <a class="generalLinks" href="#">Sign Out</a>
+        <a class="generalLinks" href="{{ url_for('account.logout') }}">Sign Out</a>
       </div>
 
     </div>
