--- a/src/umr/static/scripts/newStyling/article-settings.css
+++ b/src/umr/static/scripts/newStyling/article-settings.css
@@ -257,6 +257,29 @@ button {
     margin-left: 96%;
 }
 
+
+
+/******** MEDIA QUERIES ********/
+@media only screen and (max-width: 839px) {
+  #search-expandable {
+    width:13.5em;
+  }
+}
+
+
+@media only screen and (max-width: 781px) {
+  #search-expandable {
+    width:9em;
+  }
+}
+
+@media only screen and (max-width: 716px) {
+  #search-expandable {
+    width:8.4em;
+  }
+
+
+
 /*** SWEEET ALERT ******/
 body.stop-scrolling {
   height: 100%;
