--- a/src/umr/static/scripts/newStyling/article-settings.css
+++ b/src/umr/static/scripts/newStyling/article-settings.css
@@ -275,8 +275,9 @@ button {
 
 @media only screen and (max-width: 716px) {
   #search-expandable {
-    width:8.4em;
+    width:8.4emem;
   }
+} 
 
 
 
