--- a/src/umr/templates/article.html
+++ b/src/umr/templates/article.html
@@ -130,10 +130,15 @@
 
               <hr class="seperator" />
               <div class="articleDetails">
-                <button class="bookmark_button">
+                <button id="bookmark_button" class="bookmark_button">
                   <img
-                    class="bookmark_icon"
-                    src="{{ url_for('reader_blueprint.static',filename='images/SVGs/bookmark-yellow.svg') }}"
+                    class="bookmark_icon_undone"
+                    src="{{ url_for('reader_blueprint.static',filename='images/SVGs/bookmark-undone.svg') }}"
+                    alt="bookmark this article"
+                  />
+                  <img
+                    class="bookmark_icon_done"
+                    src="{{ url_for('reader_blueprint.static',filename='images/SVGs/bookmark-done.svg') }}"
                     alt="bookmark this article"
                   />
                 </button>
