--- a/src/umr/static/scripts/newStyling/reader-header.css
+++ b/src/umr/static/scripts/newStyling/reader-header.css
@@ -74,3 +74,27 @@ a {
 a:hover {
   color: #ffbb54;
 }
+
+
+/*******MEDIA QUERIES **********/
+@media screen and (max-width: 600px) {  
+  .welcome_personal, p{
+    display:none; 
+  }
+  
+  .select-article, h1{
+    font-size: 1.5em;
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+  }
+  
+  .row__bar{
+    padding:0em; 
+  }
+  .bar{
+    width: 19px;
+    height: 0px;
+    border: 0.5px solid #acacac;
+  }
+  
+  }
