--- a/src/umr/static/scripts/newStyling/reader-list.css
+++ b/src/umr/static/scripts/newStyling/reader-list.css
@@ -105,3 +105,44 @@ body {
   padding: 0.20833333333333334em 1.3541666666666667em;
   font-size: 0.8333333333333334em;
 }
+
+
+/*******MEDIA QUERIES **********/
+@media screen and (max-width: 600px) {
+.articleLinkTitle{
+  padding-right:0em; 
+  font-size: 0.9em;
+  color: black;
+  width: 247px;
+} 
+
+
+.articleLinkSummary{
+  padding-right:0em; 
+  width: 246px;
+  text-align: justify;
+}
+
+.difficulty-level{
+  margin-left: 3.40625em;
+}
+
+.articleLinkDifficultyText {
+  position: absolute;
+  padding: 0.8em;
+  width: 1em;
+  height: 1em;
+  text-align: center;
+  border-radius: 50%;
+  background: #f1f0f0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.7em;
+}
+.articleLinkDifficulty {
+  width: 0em; 
+  float: unset;
+  padding-left: 11px;
+}
+}
