--- a/src/umr/templates/article.html
+++ b/src/umr/templates/article.html
@@ -152,16 +152,14 @@
               <br />
             </div>
           </div>
-          <div id="like_button">
-            <button
-              id="toggle_like"
-              class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect"
-            >
-              <i class="material-icons">thumb_up</i>
-            </button>
-          </div>
         </div>
 
+<div class="finalChoices">
+  <button id="enjoyedButton" class="finalChoicesBottons" type="button">Enjoyed reading?</button>
+  <button id="reviewButton" class="finalChoicesBottons" type="button">Review Words</button>
+</div>
+
+        <!--
         <div id="bottom_feedback_div" style="visibility:hidden">
           <div class="questionnaire-content">
             {% include 'question__article_difficulty.html' %}
@@ -172,11 +170,12 @@
         <div class="mdl-snackbar__text"></div>
         <button class="mdl-snackbar__action" type="button"></button>
       </div>
+      -->
     </div>
 
-    <!-- Menu to change the translation -->
+    <!-- Menu to change the translation 
     <div id="alterMenuContainer">
       <div id="alterMenu"></div>
-    </div>
+    </div>-->
   </body>
 </html>
