--- a/src/umr/static/styles/article.css
+++ b/src/umr/static/styles/article.css
@@ -335,18 +335,10 @@ a:hover {
   height: 30px;
 }
 
-.bookmark_icon_done.off {
-  display: none;
-}
-
 .bookmark_icon_undone {
   margin: 5px;
   width: 30px;
   height: 30px;
-}
-
-.bookmark_icon_undone.off {
-  display: none;
 }
 
 .page-content,
@@ -376,22 +368,32 @@ a:hover {
   border-radius: 0.3em;
 }
 
-#like_button {
-  text-align: center;
-  padding-bottom: 3em;
+.finalChoices {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
-#toggle_like:hover {
-  background-color: none;
-  cursor: pointer;
+.finalChoicesBottons {
+  margin: 5px;
+  width: 180px;
+  height: 45px;
+  border-color: #ffbb54;
+  border-width: 2px;
+  border-radius: 10px;
+  font-size: 18px;
 }
 
-#toggle_like:not(.mdl-button--disabled) {
-  background-color: #ffe086;
+#enjoyedButton {
+  color: #ffbb54;
+  background-color: white;
 }
 
-.material-icons.star.off {
-  display: none;
+#reviewButton {
+  color: white;
+  background-color: #ffbb54;
 }
 
 .noselect {
